--- a/alz-bicep-notebook.ipynb
+++ b/alz-bicep-notebook.ipynb
@@ -12,7 +12,14 @@
     }
    },
    "source": [
-    "# Azure Landing Zones"
+    "# ALZ-Bicep Polygot Notebook \n",
+    "For more info, please see: https://github.com/sangling/ALZ-Bicep-Notebook  \n",
+    "\n",
+    "**NOTE:** _The below is intended deploying to Azure global regions only. **NOT** for deploying to Azure China regions. This is due to minor difference in services which are available in Azure global and in Azure China, but the feature parity gap is narrowing._\n",
+    "\n",
+    "1. [Azure Connection](#Azure-Connection)  \n",
+    "2. [ALZ-Bicep-Notebook Initial Setup](#ALZ-Bicep-Notebook-Initial-Setup)  \n",
+    "3. [ALZ-Bicep Deployment Flow](#ALZ-Bicep-Deployment-Flow)  "
    ]
   },
   {
@@ -27,22 +34,7 @@
     }
    },
    "source": [
-    "Note: The below is for deploying to Azure global regions only. **NOT** for deploying to Azure China regions. This is due to minor difference in services which are available in Azure global and in Azure China, but the feature parity gap is narrowing."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    }
-   },
-   "source": [
-    "## Connection"
+    "## Azure Connection"
    ]
   },
   {
@@ -61,8 +53,9 @@
    },
    "outputs": [],
    "source": [
-    "$subscription   = ''\n",
+    "# NOTE: $subscription is referenced in ALZ-Bicep-Notebook Initial Setup\n",
     "\n",
+    "$subscription   = ''\n",
     "Connect-AzAccount -SubscriptionId $subscription"
    ]
   },
@@ -97,7 +90,7 @@
     }
    },
    "source": [
-    "## ALZ-Bicep Initial Setup"
+    "## ALZ-Bicep Notebook Initial Setup"
    ]
   },
   {
@@ -122,7 +115,7 @@
     "$localRepo          = \"C:/Git/ALZ-Bicep\"\n",
     "\n",
     "$parLocation        = \"southafricanorth\"        # Deplopyment Region\n",
-    "$parCompanyPrefix   = \"alz\"                 # default=\"alz\", min 2-chars max 10-chars\n",
+    "$parCompanyPrefix   = \"alz\"                     # default=\"alz\", min 2-chars max 10-chars\n",
     "$TopLevelMGPrefix   = $parCompanyPrefix\n",
     "\n",
     "## Management Group Parameters\n",
@@ -133,8 +126,8 @@
     "$parLandingZoneMgAlzDefaultsEnable      = 0     # Default=True(1) - Corp and Online default Landing Zones\n",
     "$parLandingZoneMgConfidentialEnable     = 0     # Default=False(0) - Confidential default Landing Zones\n",
     "$parLandingZoneMgChildren               = @{}    # Custom Landing Zones - Defaults = Corp & Online\n",
-    "$parLandingZoneMgChildren              += @{\"ALZ01\" = @{'displayname'='AZL Test 01'}}\n",
-    "$parLandingZoneMgChildren              += @{\"ALZ02\" = @{'displayname'='AZL Test 02'}}\n",
+    "$parLandingZoneMgChildren              += @{\"ALZ01\" = @{'displayname'='ALZ Test 01'}}\n",
+    "#$parLandingZoneMgChildren              += @{\"ALZ02\" = @{'displayname'='ALZ Test 02'}}\n",
     "\n",
     "## Subscription IDs\n",
     "$PlatformSubscriptionId                     = $subscription     # Platform Management Group\n",
@@ -171,10 +164,10 @@
     "$parTelemetryOptOut                         = 0                 # Default=False (0)\n",
     "\n",
     "#DEBUG\n",
-    "#Write-Host \"<Test>`n\"\n",
-    "#$parLandingZoneMgChildrenSubs\n",
-    "#$parLandingZoneMgChildrenSubs.gettype()\n",
-    "#Write-Host \"`n</Test>`n\"\n",
+    "    #Write-Host \"<Test>`n\"\n",
+    "    #$parLandingZoneMgChildrenSubs\n",
+    "    #$parLandingZoneMgChildrenSubs.gettype()\n",
+    "    #Write-Host \"`n</Test>`n\"\n",
     "#/DEBUG\n",
     "\n",
     "Write-Host \"`n$(Get-Date) - Initial parameters set`n\""
@@ -192,7 +185,22 @@
     }
    },
    "source": [
-    "## 1 Management Groups"
+    "## ALZ-Bicep Deployment Flow"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "source": [
+    "### 1 Management Groups"
    ]
   },
   {
@@ -209,7 +217,7 @@
    "source": [
     "\n",
     "Configures the management group hierarchy to support Azure Landing Zone reference implementation.  \n",
-    "**Prerequisites:** Owner role assignment at / root management group & ALZ-Bicep Initial Setup  \n",
+    "**Prerequisites:** Owner role assignment at root management group & [ALZ-Bicep Notebook Initial Setup](#ALZ-Bicep-Notebook-Initial-Setup)  \n",
     "**Reference:** https://github.com/Azure/ALZ-Bicep/tree/main/infra-as-code/bicep/modules/managementGroups"
    ]
   },
@@ -289,7 +297,7 @@
     }
    },
    "source": [
-    "## 2 Custom Policy Definitions\t"
+    "### 2 Custom Policy Definitions\t"
    ]
   },
   {
@@ -384,7 +392,7 @@
     }
    },
    "source": [
-    "## 3 Custom RBAC Role Definitions"
+    "### 3 Custom RBAC Role Definitions"
    ]
   },
   {
@@ -477,7 +485,7 @@
     }
    },
    "source": [
-    "## 4 Logging & Security"
+    "### 4 Logging & Security"
    ]
   },
   {
@@ -594,25 +602,6 @@
    },
    "outputs": [],
    "source": [
-    "$ManagementSubscriptionId"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
     "## Log Analytics and Sentinel Deployment *THIS IS NOT A TEST*\n",
     "## ================================================================================\n",
     "## NOTE: Test the deployment above and check the output is as expected\n",
@@ -635,7 +624,7 @@
     }
    },
    "source": [
-    "### 4.1 Management Groups Diagnostic Settings  "
+    "#### 4.1 Management Groups Diagnostic Settings  "
    ]
   },
   {
@@ -684,7 +673,8 @@
     "# Created in Log Analytics and Sentinel Module\n",
     "# $parLogAnalyticsWorkspaceResourceId = (Get-AzResourceGroupDeployment -ResourceGroupName $myResourceGroupName -Name $inputObject[\"DeploymentName\"]).Outputs.outLogAnalyticsWorkspaceId.value\n",
     "\n",
-    "$parLandingZoneMgChildren               = \"ALZ01\",\"ALZ02\"   #NOTE: Automate this from Management Groups Definition\n",
+    "$parLandingZoneMgChildren               = \"ALZ01\"   #NOTE: Automate this from Management Groups Definition\n",
+    "#$parLandingZoneMgChildren               = \"ALZ01\",\"ALZ02\"   #NOTE: Automate this from Management Groups Definition\n",
     "\n",
     "## Management Groups Diagnostics Object\n",
     "## ================================================================================\n",
@@ -745,7 +735,7 @@
     }
    },
    "source": [
-    "## 5 Hub Networking\n"
+    "### 5 Hub Networking\n"
    ]
   },
   {
@@ -776,7 +766,7 @@
     }
    },
    "source": [
-    "### 5.1 Hub and Spoke VNet"
+    "#### 5.1 Hub and Spoke VNet"
    ]
   },
   {
@@ -840,23 +830,26 @@
     "## Bastion Host Parameters\n",
     "## --------------------------------------------------------------------------------\n",
     "$parAzBastionEnabled                = 0   # Default=True (1)\n",
-    "#$parAzBastionName                  = $parCompanyPrefix + \"-bastion\"\n",
-    "#$parAzBastionSku                   = \"Standard\"\n",
-    "#$parAzBastionNsgName               = \"nsg-AzureBastionSubnet\"\n",
+    "\n",
+    "$parAzBastionName                  = $parCompanyPrefix + \"-bastion\"\n",
+    "$parAzBastionSku                   = \"Standard\"\n",
+    "$parAzBastionNsgName               = \"nsg-AzureBastionSubnet\"\n",
     "\n",
     "## DDoS Network Protection Parameters\n",
     "## --------------------------------------------------------------------------------\n",
     "$parDdosEnabled                     = 0   # Default=True (1)\n",
-    "#$parDdosPlanName                   = $parCompanyPrefix + \"ddos-plan\"\n",
+    "\n",
+    "$parDdosPlanName                   = $parCompanyPrefix + \"ddos-plan\"\n",
     "\n",
     "## Azure Firewall Parameters\n",
     "## --------------------------------------------------------------------------------\n",
     "$parAzFirewallEnabled               = 0   # Default=True (1)\n",
-    "#$parAzFirewallName                 = \"alz-azfw-eastus\"\n",
-    "#$parAzFirewallPoliciesName         = \"alz-azfwpolicy-eastus\"\n",
-    "#$parAzFirewallTier                 = \"Standard\"\n",
-    "#$parAzFirewallAvailabilityZones    = \"\"\n",
-    "#$parAzFirewallDnsProxyEnabled      = 0   # Default=True (1)\n",
+    "\n",
+    "$parAzFirewallName                 = \"alz-azfw-eastus\"\n",
+    "$parAzFirewallPoliciesName         = \"alz-azfwpolicy-eastus\"\n",
+    "$parAzFirewallTier                 = \"Standard\"\n",
+    "$parAzFirewallAvailabilityZones    = \"\"\n",
+    "$parAzFirewallDnsProxyEnabled      = 0   # Default=True (1)\n",
     "\n",
     "## TO DO\n",
     "#parAzFirewallAvailabilityZones     = \"\"\n",
@@ -882,14 +875,14 @@
     "                                    \t   peerWeight         = \"5\" \n",
     "                          }\n",
     "}  \n",
-    "## NOTE: Comment out this line if VPN Gateway *is* required\n",
+    "## NOTE: Comment out next line if VPN Gateway *IS* required\n",
     "$parVpnGatewayConfig = @{ 'name'    = \"noconfigVpn\" } \n",
     "## /NOTE\n",
     "\n",
     "## ExpressRoute Gateway Parameters\n",
     "## --------------------------------------------------------------------------------\n",
     "## NOTE: See note below :/\n",
-    "$parExpressRouteGatewayConfig     =  @{ name                                = $parCompanyPrefix + \"-ExpressRoute-Gateway\"; `\n",
+    "$parExpressRouteGatewayConfig     =  @{ name                            = $parCompanyPrefix + \"-ExpressRoute-Gateway\"; `\n",
     "                                    gatewayType                         = \"ExpressRoute\"; `\n",
     "                                    sku                                 = \"Standard\"; `\n",
     "                                    vpnType                             = \"RouteBased\"; `\n",
@@ -905,28 +898,19 @@
     "                                    \t\t\t\t peerWeight         = \"5\" \n",
     "                                    }\n",
     "}\n",
-    "## NOTE: Comment out this line if ER Gateway *IS* required\n",
+    "## NOTE: Comment out next line if ER Gateway *IS* required\n",
     "$parExpressRouteGatewayConfig     = @{ 'name' = \"noconfigEr\" }\n",
     "## /NOTE\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "$parHubRouteTableName = \"alz-hub-routetable\"\n",
-    "$parDisableBgpRoutePropagation = 0      # Default=False (0)\n",
-    "\n",
-    "$parPrivateDnsZonesEnabled  = 1   # Default=True (1)\n",
+    "$parHubRouteTableName             = \"alz-hub-routetable\"\n",
+    "$parDisableBgpRoutePropagation    = 0   # Default=False (0)\n",
+    "$parPrivateDnsZonesEnabled        = 1   # Default=True (1)\n",
     "\n",
     "## Other Parameters\n",
     "## --------------------------------------------------------------------------------\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## TO DO\n",
-    "# $parDnsServerIps\n",
-    "# parPublicIpSku\n",
-    "\n",
+    "$parDnsServerIps = @()\n",
+    "$parPublicIpSku = \"Standard\"\n",
     "\n",
     "Select-AzSubscription -SubscriptionId $ConnectivitySubscriptionId\n",
     "\n",
@@ -1004,20 +988,22 @@
     "        \"privatelink.webpubsub.azure.com\"\n",
     "    )\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "## Hub Networking Configuration Object\n",
     "## ================================================================================\n",
     "$inputObject = @{\n",
     "  parLocation                 = $parLocation\n",
+    "  parCompanyPrefix            = $parCompanyPrefix\n",
     "  parHubNetworkName           = $parHubNetworkName\n",
     "  parHubNetworkAddressPrefix  = $parHubNetworkAddressPrefix\n",
+    "  parDnsServerIps             = $parDnsServerIps\n",
+    "  parPublicIpSku              = $parPublicIpSku\n",
+    "  parAzBastionEnabled         = $parAzBastionEnabled\t\n",
+    "  parAzBastionName\t          = $parAzBastionName\n",
+    "  parAzBastionSku             = $parAzBastionSku\t\n",
+    "  parDdosEnabled              = $parDdosEnabled\n",
     "\n",
-    "  \n",
+    "  parAzFirewallEnabled        = $parAzFirewallEnabled\n",
+    "\n",
     "  DeploymentName        = $parCompanyPrefix + \"-HubNetworkingDeploy-{0}\" -f (-join (Get-Date -Format 'yyyyMMddTHHMMssffffZ')[0..63])\n",
     "  ResourceGroupName     = $myResourceGroupName\n",
     "  parPrivateDnsZones    = $parPrivateDnsZones\n",
@@ -1028,8 +1014,11 @@
     "$inputObject[\"parSubnets\"] = @{ Name = \"AzureBastionSubnet\"; ipAddressRange = \"$AzureBastionSubnet\"}, `\n",
     "                             @{ Name = \"GatewaySubnet\"; ipAddressRange = \"$GatewaySubnet\"}, `\n",
     "                             @{ Name = \"AzureFirewallSubnet\"; ipAddressRange = \"$AzureFirewallSubnet\"}\n",
-    "\n",
-    "# if ($AzureBastionSubnet) { $inputObject[\"parSubnets\"] = @{ 'name' = \"AzureBastionSubnet\", 'ipAddressRange' = \"$AzureBastionSubnet\" } }\n",
+    "## TO DO\n",
+    "#$inputObject[\"parSubnets\"] = @{}\n",
+    "#if ($AzureBastionSubnet) { $inputObject[\"parSubnets\"] = @{}'name' = \"AzureBastionSubnet\", 'ipAddressRange' = \"$AzureBastionSubnet\" ) }\n",
+    "#if ($GatewaySubnet) { $inputObject[\"parSubnets\"] = @{ 'name' = \"GatewaySubnet\", 'ipAddressRange' = \"$GatewaySubnet\" } }\n",
+    "#if ($AzureFirewallSubnet) { $inputObject[\"parSubnets\"] = @{ 'name' = \"AzureFirewallSubnet\", 'ipAddressRange' = \"$AzureFirewallSubnet\" } }\n",
     "\n",
     "$inputObject[\"parVpnGatewayConfig\"] = $parVpnGatewayConfig \n",
     "$inputObject[\"parExpressRouteGatewayConfig\"] = $parExpressRouteGatewayConfig \n",
@@ -1102,7 +1091,7 @@
     }
    },
    "source": [
-    "### 5.2 Virtual WAN (TO DO)"
+    "#### 5.2 Virtual WAN (TO DO)"
    ]
   },
   {
@@ -1254,7 +1243,7 @@
     }
    },
    "source": [
-    "## 6 RBAC Role Assignments (TO DO)"
+    "### 6 RBAC Role Assignments (TO DO)"
    ]
   },
   {
@@ -1373,7 +1362,7 @@
     }
    },
    "source": [
-    "### 6.1 Assignment to Management Groups (In Progress)"
+    "#### 6.1 Assignment to Management Groups (In Progress)"
    ]
   },
   {
@@ -1487,7 +1476,7 @@
     }
    },
    "source": [
-    "### 6.2 Assignment to Subscriptions"
+    "#### 6.2 Assignment to Subscriptions"
    ]
   },
   {
@@ -1502,7 +1491,7 @@
     }
    },
    "source": [
-    "### 6.2 Assignment to Resource Groups"
+    "#### 6.3 Assignment to Resource Groups"
    ]
   },
   {
@@ -1657,7 +1646,7 @@
     }
    },
    "source": [
-    "## 7 Subscription Placement"
+    "### 7 Subscription Placement"
    ]
   },
   {
@@ -1760,10 +1749,11 @@
     }
    },
    "source": [
-    "## 8 Built-In and Custom Policy Assignments"
+    "### 8 Built-In and Custom Policy Assignments (In Progress)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -1775,7 +1765,26 @@
    },
    "source": [
     "Creates policy assignments to provide governance at scale.  \n",
-    "**Prerequisites:** Management Groups, Log Analytics Workspace & Custom Policy Definitions "
+    "**Prerequisites:** Management Groups, Log Analytics Workspace & Custom Policy Definitions  \n",
+    "https://github.com/Azure/ALZ-Bicep/tree/main/infra-as-code/bicep/modules/policy/assignments/alzDefaults "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "source": [
+    "Currently this module only works with the default management groups.  \n",
+    "https://github.com/Azure/ALZ-Bicep/issues/429  \n",
+    "possible fix:  \n",
+    "https://github.com/Azure/ALZ-Bicep/pull/446"
    ]
   },
   {
@@ -1836,7 +1845,7 @@
     "## ================================================================================\n",
     "## NOTE: Test the deployment above and check the output is as expected\n",
     "##\n",
-    "New-AzResourceGroupDeployment @inputObject -Verbose"
+    "New-AzManagementGroupDeployment @inputObject -Verbose"
    ]
   },
   {
@@ -1851,7 +1860,7 @@
     }
    },
    "source": [
-    "## 9 Spoke Networking"
+    "### 9 Spoke Networking"
    ]
   },
   {
@@ -1869,6 +1878,22 @@
     "Creates Spoke networking infrastructure for workloads with Virtual Network Peering (optional) to support Hub & Spoke network topology or Virtual Hub Connection (optional).  \n",
     "**Prerequisites:** Management Groups, Hub Networking & Subscription for spoke networking  \n",
     "https://github.com/Azure/ALZ-Bicep/tree/main/infra-as-code/bicep/orchestration/hubPeeredSpoke"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "pwsh"
+    },
+    "polyglot_notebook": {
+     "kernelName": "pwsh"
+    }
+   },
+   "source": [
+    "https://github.com/Azure/ALZ-Bicep/pull/457  \n",
+    "CaseSensitiveDeploymentParameterNamesFound - The deployment parameters are using case sensitive names. The error parameter name(s): parSpokeToHubRouteTableName,parAllowHubVpnGatewayTransit. Please see https://aka.ms/arm-keyvault for usage details."
    ]
   },
   {
@@ -1904,32 +1929,33 @@
     "$parNextHopIpAddress                    = \"\"\n",
     "$parDisableBgpRoutePropagation          = 0\n",
     "\n",
-    "$parSpoketoHubRouteTableName            = \"rtb-spoke-to-hub\"\n",
+    "$parSpokeToHubRouteTableName            = \"rtb-spoke-to-hub\"\n",
     "$parHubVirtualNetworkId                 = $outHubVirtualNetworkId\n",
     "\n",
     "$parAllowSpokeForwardedTraffic          = 0\n",
-    "$parAllowHubVPNGatewayTransit           = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "pwsh"
-    },
-    "polyglot_notebook": {
-     "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "$parAllowHubVPNGatewayTransit           = 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "$inputObject = @{\n",
     "  DeploymentName        = $parCompanyPrefix + \"HubPeeredSpoke-{0}\" -f (-join (Get-Date -Format 'yyyyMMddTHHMMssffffZ')[0..63])\n",
     "  Location              = $parLocation\n",
+    "  parTopLevelManagementGroupPrefix        = $parTopLevelManagementGroupPrefix\n",
+    "  parPeeredVnetSubscriptionId         = $parPeeredVnetSubscriptionId\n",
+    "  parPeeredVnetSubscriptionMgPlacement      = $parPeeredVnetSubscriptionMgPlacement\n",
+    "  parSpokeNetworkName   = $parSpokeNetworkName\n",
+    "  parSpokeNetworkAddressPrefix     = $parSpokeNetworkAddressPrefix\n",
+    "  parDnsServerIps = $parDnsServerIps\n",
+    "  parNextHopIpAddress  = $parNextHopIpAddress\n",
+    "  parDisableBgpRoutePropagation = $parDisableBgpRoutePropagation\n",
+    "  parSpokeToHubRouteTableName = $parSpoketoHubRouteTableName\n",
+    "  parHubVirtualNetworkId = $parHubVirtualNetworkId\n",
+    "  parAllowSpokeForwardedTraffic = $parAllowSpokeForwardedTraffic\n",
+    "  parAllowHubVPNGatewayTransit = $parAllowHubVPNGatewayTransit\n",
+    "\n",
     "  ManagementGroupId     = $parCompanyPrefix\n",
     "  TemplateFile          = \"$localRepo\\infra-as-code/bicep/orchestration/hubPeeredSpoke/hubPeeredSpoke.bicep\"\n",
     "  TemplateParameterFile = \"$localRepo\\infra-as-code/bicep/orchestration/hubPeeredSpoke/parameters/hubPeeredSpoke.parameters.all.json\"\n",
