Default MGs enabled by default

--- a/alz-bicep-notebook.ipynb
+++ b/alz-bicep-notebook.ipynb
@@ -46,9 +46,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -68,9 +65,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -102,9 +96,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -123,10 +114,10 @@
     "$parTopLevelManagementGroupPrefix       = $parCompanyPrefix\n",
     "$parTopLevelManagementGroupDisplayName  = $parCompanyPrefix + \" Azure Landing Zones\"\n",
     "$parTopLevelManagementGroupParentId     = \"\"    # Intermediate root Management Group\n",
-    "$parLandingZoneMgAlzDefaultsEnable      = 0     # Default=True(1) - Corp and Online default Landing Zones\n",
+    "$parLandingZoneMgAlzDefaultsEnable      = 1     # Default=True(1) - Corp and Online default Landing Zones\n",
     "$parLandingZoneMgConfidentialEnable     = 0     # Default=False(0) - Confidential default Landing Zones\n",
     "$parLandingZoneMgChildren               = @{}    # Custom Landing Zones - Defaults = Corp & Online\n",
-    "$parLandingZoneMgChildren              += @{\"ALZ01\" = @{'displayname'='ALZ Test 01'}}\n",
+    "#$parLandingZoneMgChildren              += @{\"ALZ01\" = @{'displayname'='ALZ Test 01'}}\n",
     "#$parLandingZoneMgChildren              += @{\"ALZ02\" = @{'displayname'='ALZ Test 02'}}\n",
     "\n",
     "## Subscription IDs\n",
@@ -230,9 +221,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -250,7 +238,7 @@
     "  parTopLevelManagementGroupParentId    = $parTopLevelManagementGroupParentId\n",
     "  parLandingZoneMgAlzDefaultsEnable     = $parLandingZoneMgAlzDefaultsEnable\n",
     "  parLandingZoneMgConfidentialEnable    = $parLandingZoneMgConfidentialEnable\n",
-    "  parLandingZoneMgChildren              = $parLandingZoneMgChildren\n",
+    "  #parLandingZoneMgChildren              = $parLandingZoneMgChildren\n",
     "  TemplateFile                          = \"$localRepo/infra-as-code/bicep/modules/managementGroups/managementGroups.bicep\"\n",
     "  TemplateParameterFile                 = \"$localRepo/infra-as-code/bicep/modules/managementGroups/parameters/managementGroups.parameters.all.json\"\n",
     "}\n",
@@ -271,9 +259,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -325,9 +310,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -366,9 +348,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -420,9 +399,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -459,9 +435,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -513,9 +486,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -595,9 +565,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -652,9 +619,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -709,9 +673,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -806,9 +767,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1061,9 +1019,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1126,9 +1081,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1184,9 +1136,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1290,9 +1239,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1312,9 +1258,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1335,9 +1278,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1374,9 +1314,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1402,9 +1339,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1446,9 +1380,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1503,9 +1434,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1535,9 +1463,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1581,9 +1506,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1609,9 +1531,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1675,10 +1594,7 @@
     "polyglot_notebook": {
      "kernelName": "pwsh"
     },
-    "tags": [],
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1726,9 +1642,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1796,9 +1709,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1834,9 +1744,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1905,9 +1812,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -1980,9 +1884,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "pwsh"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -2000,6 +1901,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
